<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.osmeuslugares.MainActivity" >

    
    <item
        android:id="@+id/acerca_de"
        android:title="@string/acerca_de" 
        android:icon="@android:drawable/ic_menu_info_details" 
        android:showAsAction="always" android:orderInCategory="1"/>
    
    <item android:id="@+id/action_settings" android:title="@string/action_settings" android:showAsAction="always" android:icon="@drawable/ic_action_settings" android:orderInCategory="2" />
    
    <item android:id="@+id/listLugares" android:title="@string/listado_lugares" android:orderInCategory="3"></item><item android:id="@+id/listCategorias" android:title="@string/listado_categorias" android:orderInCategory="4"></item><item android:id="@+id/salir" android:title="@string/salir" android:orderInCategory="5" />
    

</menu>
