<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ale.osmeuslugares.modelo.EditarLugarActivity" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/editNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewNombre" />

        <TextView
            android:id="@+id/textViewTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editNombre"
            android:paddingTop="10dp"
            android:text="@string/tipo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

        <Spinner
            android:id="@+id/spinnerCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/textViewTipo"
            android:layout_toRightOf="@id/textViewTipo"
            android:entries="@array/lista_tipos"
            android:paddingTop="10dp" />
			
		<TextView
		    android:id="@+id/textViewCiudad"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/spinnerCategoria"
		    android:paddingTop="10dp"
		    android:text="@string/ciudad"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:textColor="#FFFFFF" />
        
         <EditText
             android:id="@+id/editCiudad"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/textViewCiudad"
             android:hint="@string/ciudaddellugar" />
        
        <TextView
            android:id="@+id/textViewDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editCiudad"
            android:paddingTop="10dp"
            android:text="@string/direccion"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

         <EditText
             android:id="@+id/editDireccion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/textViewDireccion"
             android:hint="@string/direcciondellugar"
             android:inputType="textPostalAddress" />

        <TextView
            android:id="@+id/textViewTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editDireccion"
            android:paddingTop="10dp"
            android:text="@string/telefono"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/editTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/textViewTelefono"
            android:hint="@string/telefonodellugar"
            android:inputType="phone" />

        <TextView
            android:id="@+id/textViewUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTelefono"
            android:paddingTop="10dp"
            android:text="@string/url"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/editUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewUrl"
            android:hint="@string/paginaweb"
            android:inputType="textUri" />

        <TextView
            android:id="@+id/textViewComentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editUrl"
            android:paddingTop="10dp"
            android:text="@string/comentario"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/editComentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewComentario"
            android:hint="@string/introducetusnotas"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editNombre"
            android:layout_marginLeft="58dp"
            android:layout_toRightOf="@+id/textViewComentario"
            android:background="@android:drawable/btn_plus"
            android:onClick="onButtonClickCategoria" />

    </RelativeLayout>



</ScrollView>