<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.osmeuslugares.ListLugares" >

    <item
        android:id="@+id/add_lugar"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/add_lugar" android:visible="true" android:icon="@android:drawable/ic_menu_add"/>
 
    <item android:id="@+id/cerrar" 
          android:title="@string/cerrar" 
          android:icon="@android:drawable/ic_menu_close_clear_cancel" 
          android:visible="true" 
          android:showAsAction="always" 
          android:orderInCategory="2"></item>
    
     <item
        android:id="@+id/acerca_de"
        android:title="@string/acerca_de" 
        android:icon="@android:drawable/ic_menu_info_details" 
        android:showAsAction="always" android:orderInCategory="3"/>
	
</menu>
